--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body{
     background: url('../img/arboles.jpg');
    background-attachment: fixed;
-
+   
 }
 
 #global{
@@ -19,7 +19,7 @@ body{
     margin: 0px auto;
     margin-top: 30px;
     background: white;
-    padding: 20px;
+    padding: 25px;
     box-shadow: 0px 0px 2px gray;
 }
 
@@ -111,4 +111,62 @@ body{
     width: 60px;
     float: auto;
     margin-bottom: 20px;
+}
+
+#sidebar{
+    font-family: Helvetica, Arial,  sans-serif;
+    width: 31%;
+    float: right;
+}
+
+#sidebar h4{
+     margin-top: 50px;
+     margin-bottom: 20px;
+     text-align: center;
+     line-height: 10px;
+     color: #333;
+     background: url("../img/lines.png") repeat-x;
+}
+
+#sidebar h4 span{
+    background: white;
+    padding: 5px;
+}
+
+#sidebar img{
+    width: 100%;
+}
+
+#sidebar ul li{
+    font-size: 15px;
+    text-align: justify;
+    list-style: none;
+    color: #333;
+}
+
+#sidebar ul li a{
+    text-decoration: none;
+    color: rgb(236, 109, 87);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+form input[type="text"],
+form input[type="password"],
+form input[type="email"]{
+    padding: 5px;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    width: 80%;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 2px rgb(236, 109, 87);
+    margin-top: 5px;
+}
+
+form input[type="submit"]{
+    background: rgb(247, 118, 96);
+    padding: 10px;
+    border: 1px solid rgb(236, 109, 87);
+    cursor:pointer;
+    color: white;
 }
