--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,28 @@ form input[type="submit"]{
     cursor:pointer;
     color: white;
 }
+form input[type="submit"]:hover{
+    background:rgb(248, 155, 139);
+    border: 1px solid rgb(221, 132, 116);
+}
+
+footer{
+    font-family:Helvetica, Arial,  sans-serif;
+    color: white;
+    height: 47px;
+    background: rgba(51,51,51,0.70);
+    margin: 0px auto;
+    width: 65%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    line-height: 47px;
+}
+footer a{
+    text-decoration: none;
+    color: rgb(236, 109, 87);
+    font-weight: bold;
+}
+footer a:hover{
+    color:rgb(248, 155, 139);
+}
