--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 28px;
     letter-spacing: 4px;
-    background: rgb(236, 109, 87);
+    
     color: white;
     text-align: center;
     width: 385px;
@@ -59,9 +59,7 @@ body{
     transition: all 300ms;
 }
 
-#menu ul li:hover{
-    background:  rgb(236, 109, 87);
-}
+
 
 #menu a{
     display: block;
@@ -104,7 +102,6 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background:  rgb(236, 109, 87);
     color: white;
     text-decoration: none;
     margin-top: 10px;
@@ -164,16 +161,11 @@ form input[type="email"]{
 }
 
 form input[type="submit"]{
-    background: rgb(247, 118, 96);
     padding: 10px;
-    border: 1px solid rgb(236, 109, 87);
     cursor:pointer;
     color: white;
 }
-form input[type="submit"]:hover{
-    background:rgb(248, 155, 139);
-    border: 1px solid rgb(221, 132, 116);
-}
+
 
 footer{
     font-family:Helvetica, Arial,  sans-serif;
@@ -194,5 +186,42 @@ footer a{
 }
 footer a:hover{
     color:rgb(248, 155, 139);
+}
+
+#selector-theme{
+    position: fixed;
+    top: 40%;
+    background: rgba(51,51,51, 0.5);
+    width:50px;
+    height: 100px;
+}
+
+#to-brown, #to-blue,#to-orange{
+    width: 25px;
+    height: 25px;
+    border:1px solid white;
+    display: block;
+    margin: 0px auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+#to-blue{
+    background: rgb(93, 161, 206);  
+
+}
+#to-brown{
+    background: rgb(112, 44, 59);
+
+}
+#to-orange{
+    background: rgb(236, 109, 87);  
+}
+
+.subir{
+    color:white;
+    text-decoration: none;
+    float: right;
 }
 
