--- a/css/blue.css
+++ b/css/blue.css
@@ -6,6 +6,12 @@
     background:  rgb(93, 161, 206);
 }
 
+
+#bienvenido{
+    background:   rgb(93, 161, 206);
+    
+}
+
 .button-more{
     background:  rgb(93, 161, 206);
 }
