--- a/css/brown.css
+++ b/css/brown.css
@@ -6,6 +6,10 @@
     background:  rgb(112, 44, 59);
 }
 
+#bienvenido{
+    background:   rgb(112, 44, 59);
+}
+
 .button-more{
     background:  rgb(112, 44, 59);
 }
