--- a/css/orange.css
+++ b/css/orange.css
@@ -6,6 +6,9 @@
     background:  rgb(236, 109, 87);
 }
 
+#bienvenido{
+    background:  rgb(236, 109, 87);
+}
 .button-more{
     background:  rgb(236, 109, 87);
 }
