--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,10 @@ body{
     padding: 7px;
     
 }
-.post h2{
+h2{
   font-size: 30px;
   color: #333;
+  font-family: Helvetica, Arial,  sans-serif;
 }
 
 .post .date{
@@ -241,5 +242,15 @@ footer a:hover{
     color:white;
     text-decoration: none;
     float: right;
+}
+
+#box{
+    width: 60%;
+    float: left;
+    margin-top: 40px;
+}
+
+#acordeon{
+    margin-top: 20px;
 }
 
