--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,9 @@ h2{
 
 form input[type="text"],
 form input[type="password"],
-form input[type="email"]{
+form input[type="email"],
+form input[type="number"],
+select{
     padding: 5px;
     border-radius: 2px;
     border: 1px solid #ccc;
@@ -253,4 +255,41 @@ footer a:hover{
 #acordeon{
     margin-top: 20px;
 }
+
+#reloj{
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Helvetica, Arial,  sans-serif;
+    color: #333;
+    border: 5px dashed #333;
+    width: 50%;
+    padding: 30px;
+    margin: 0 auto;
+    text-align: center;
+    
+
+}
+
+#form_contact{
+    width: 50%;
+    margin-top: 15px;
+    font-family: Helvetica, Arial,  sans-serif;
+}
+
+#form_contact{
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.form-error{
+    /*float: right;*/
+    font-size: 11px;
+    background: rgb(228, 58, 58);
+    color: white;
+    padding: 10px;
+    width: 100%;
+}
+ 
+
 
